Finished working on the new entities, bug fixes

--- a/src/main/resources/assets/santan/lang/en_us.json
+++ b/src/main/resources/assets/santan/lang/en_us.json
@@ -5,6 +5,12 @@
 "item.santan.elf_spawn_egg" : "Evil Elf Spawn Egg",
 "entity.santan.gingerbread_man" : "Gingerbread Man",
 "item.santan.gingerbread_man_spawn_egg" : "Gingerbread Man Spawn Egg",
+"entity.santan.tree" : "Gift Giver",
+"item.santan.tree_spawn_egg" : "Gift Giver Spawn Egg",
+"entity.santan.snowy_tree" : "Snowballer",
+"item.santan.snowy_tree_spawn_egg" : "Snowballer Spawn Egg",
+"entity.santan.present" : "Present",
+"entity.santan.snowball" : "Snowball",
 "item.santan.candy_fragment" : "Candy Fragment",
 "item.santan.candy_clump" : "Candy Clump",
 "item.santan.candy_sword" : "Candybar Greatsword",
